# SLICOT-Reference

./: .gitignore  CMakeLists.txt  CMakePresets.json  Installation.md  vcpkg.json
cmake/: SLICOTConfig.cmake.in  slicot_sources.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt  sources.cmake
src_aux/: CMakeLists.txt  dgegs.f  readme
